; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_json.c_popen_obj_attr.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_json.c_popen_obj_attr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"%.*s\22%s\22: {%.*s\00", align 1
@TAB = common dso_local global i32 0, align 4
@nlines = common dso_local global i32 0, align 4
@NL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i32)* @popen_obj_attr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @popen_obj_attr(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = load i32, i32* %6, align 4
  %9 = load i32, i32* @TAB, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* @nlines, align 4
  %12 = load i32, i32* @NL, align 4
  %13 = call i32 @pjson(i32* %7, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %8, i32 %9, i8* %10, i32 %11, i32 %12)
  ret void
}

declare dso_local i32 @pjson(i32*, i8*, i32, i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
